[package]
name = "asterion"
version = "0.3.1"
edition = "2021"
authors = ["Alessandro Ricottone <ricott2@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Find your way out of a dangeroussh labyrinth"
readme = "README.md"
homepage = "https://github.com/ricott1/asterion"
repository = "https://github.com/ricott1/asterion"
keywords = ["cli", "dungeon", "game"]
categories = ["games"]

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
image = "0.25.6"
itertools = "0.14.0"
knossos = "1.2.0"
log = "0.4.29"
log4rs = "1.4.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
ratatui = { version = "0.29.0", features = ["unstable-backend-writer"] }
russh = "0.57.0"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = "1.49.0"
tokio-util = "0.7.18"
uuid = { version = "1.19.0", features = ["v4", "serde"] }

